--- a/client/src/vistaReporteRadioBase.html
+++ b/client/src/vistaReporteRadioBase.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-
+hola
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
     <script src="app.js"></script> 
 </body>
