--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Hola<%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <noscript>
@@ -13,5 +13,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://unpkg.com/vue/dist/vue.min.js"></script>
+    <script src="./client/src/main.js"></script>
   </body>
 </html>
