--- a/client/src/vistaReporteRadioBase.html
+++ b/client/src/vistaReporteRadioBase.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-hola
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
-    <script src="app.js"></script> 
+    <div id="app"></div>
+    <!--script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+    <script src="./main.js"></script--> 
 </body>
 </html>
